<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cardenalito</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Connect to twitter</string>
    <string name="title_activity_timeline">Home</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="action_compose_label">Compose</string>
    <string name="title_activity_compose"></string>
    <string name="compose_tweet_hint">What\'s happening</string>
    <string name="action_tweet_label">TWEET</string>
    <string name="foo_name_label">Foo Bar</string>
    <string name="foo_label">\@foo</string>
    <string name="sample_tweet_body_label">This is the tweet body</string>
    <string name="created_at_sample_label">2h</string>
    <string name="title_activity_tweet_detail">Tweet</string>
    <string name="action_profile_label">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_signout_label">Sign Out</string>
    <string name="no_internet_error_msg">Oops! no internet connection...</string>
    <string name="remote_call_error_msg">Oops! something failed...</string>
    <string name="retweets_label">RETWEETS</string>
    <string name="favorites_label">FAVORITES</string>

</resources>