<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:id="@+id/llTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/profile_image_description"
                android:onClick="onProfileImageClick"
                android:src="@drawable/ic_action_user_profile" />

            <TextView
                android:id="@+id/tvUserName"
                style="@style/DetailUserName"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/ivProfileImage"
                android:text="@string/foo_name_label" />

            <TextView
                android:id="@+id/tvUserScreenName"
                style="@style/DetailScreenName"
                android:layout_below="@+id/tvUserName"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/ivProfileImage"
                android:text="@string/foo_label" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvTweetBody"
            style="@style/DetailTweetBody"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:autoLink="all"
            android:text="@string/sample_tweet_body_label" />

        <ImageView
            android:id="@+id/ivMediaEntity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:src="@drawable/ic_action_user_profile"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvCreatedAt"
            style="@style/CreatedAt"
            android:layout_margin="4dp"
            android:text="@string/created_at_sample_label" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/darker_gray" 
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/llCounts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/llRetweetsData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tvRetweetsCount"
                    style="@style/StatisticData"
                    android:layout_marginLeft="4dp"
                    android:text="20" />

                <TextView
                    android:id="@+id/tvRetweetsLabel"
                    style="@style/StatisticDataLabel"
                    android:layout_marginLeft="4dp"
                    android:text="@string/retweets_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFavoriteData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tvFavoritesCount"
                    style="@style/StatisticData"
                    android:layout_marginLeft="10dp"
                    android:text="5" />

                <TextView
                    android:id="@+id/tvFavoritesLabel"
                    style="@style/StatisticDataLabel"
                    android:layout_marginLeft="4dp"
                    android:text="@string/favorites_label" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llTweet"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_card"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/llReply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/ivReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_reply" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRetweets"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:gravity="center">

            <CheckBox
                android:id="@+id/cbRetweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_retweet"/>

            <TextView
                android:id="@+id/tvRetweets"
                style="@style/StatisticDataTimeline"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFavorites"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/cbFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_favorite" />

            <TextView
                android:id="@+id/tvFavorites"
                style="@style/StatisticDataTimeline"
                android:gravity="center_vertical"/>
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>